--- a/app/components/home/index.html
+++ b/app/components/home/index.html
@@ -1,3 +1,29 @@
 <div class="wrapper">
-    {{ content }}
+    <div class="row">
+        {{content}}
+
+        <!--<div>{{list1}}</div>
+        <div>{{list2}}</div>-->
+
+        <div class="column left">
+            <span class="drag-item" ng-repeat="item in list1 track by $index" ng-show="item.name" 
+                data-drag="true" 
+                ng-model="list1" 
+                jqyoui-draggable="{index: {{$index}}, placeholder: 'true'}">
+                {{item.name}}
+            </span>
+        </div>
+
+        <div class="column right drop-zone" data-drop="true" ng-model='list2' jqyoui-droppable="{multiple:true}">
+            <span class="drag-item" ng-repeat="item in list2 track by $index" ng-show="item.name" 
+                data-drag="true" 
+                ng-model="list2" 
+                jqyoui-draggable="{index: {{$index}}, animate:true}">
+                    {{item.name}}
+                    <span class="remove" ng-click="remove($index);">X</span>
+                </span>
+        </div>
+
+    </div>
+
 </div>
