--- a/app/components/home/index.html
+++ b/app/components/home/index.html
@@ -9,16 +9,18 @@
             <span class="drag-item" ng-repeat="item in list1 track by $index" ng-show="item.name" 
                 data-drag="true" 
                 ng-model="list1" 
-                jqyoui-draggable="{index: {{$index}}, placeholder: 'true'}">
+                jqyoui-draggable="{index: {{$index}}, placeholder: 'keep'}"
+                data-action="{{item}}">
                 {{item.name}}
             </span>
         </div>
 
-        <div class="column right drop-zone" data-drop="true" ng-model='list2' jqyoui-droppable="{multiple:true}">
+        <div class="column right drop-zone" data-drop="true" ng-model='list2' 
+        jqyoui-droppable="{multiple:true, beforeDrop: 'promptDrop', onDrop:'dropConfirmed'}">
             <span class="drag-item" ng-repeat="item in list2 track by $index" ng-show="item.name" 
                 data-drag="true" 
                 ng-model="list2" 
-                jqyoui-draggable="{index: {{$index}}, animate:true}">
+                jqyoui-draggable="{index: {{$index}}, animate:false}">
                     {{item.name}}
                     <span class="remove" ng-click="remove($index);">X</span>
                 </span>
