--- a/src/app/components/home/index.html
+++ b/src/app/components/home/index.html
@@ -1,5 +1,3 @@
-<div class="wrapper">
-    <div class="row">
-        {{content}}
-    </div>
+<div class="wrapper" ng-cloak>
+    {{content}}
 </div>
