Google web fonts and material icon support through pre-processing task

--- a/src/app/directives/header/index.html
+++ b/src/app/directives/header/index.html
@@ -1,11 +1,11 @@
 <header ng-cloak>
     <div class="wrapper">
-        <a ui-sref="home" class="site-title">{{siteTitle}}</a>
+        <a ui-sref="home" class="site-title"><i class="material-icons">&#xE90D;</i> {{siteTitle}}</a>
 
         <nav>
             <ul>
                 <li><a ui-sref="home" ui-sref-active="active" title="Home">
-                    <i class="material-icons">home</i>
+                    <i class="material-icons">&#xE88A;</i>
                     <span class="text">Home</span>
                 </a></li>
             </ul>
