--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,3 +1,13 @@
+html, body{
+    font-family: 'Open Sans';
+    font-weight: normal;
+    font-size: 14px;
+}
+
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Playfair Display'
+}
+
 .wrapper{
     max-width: 960px;
     width: 100%;
