--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,9 +5,17 @@
         display: block;
 
         .site-title{
+            font-family: 'Playfair Display', serif;
+            font-weight: 700;
             font-size: 25px;
             line-height: 50px;
             float: left;
+
+            .material-icons{
+                position: relative;
+                top: 5px;
+                font-size: 30px;
+            }
         }
 
         nav{
